--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
+autopep8==1.6.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
 click==8.1.3
+cloudinary==1.30.0
+colorama==0.4.4
 dnspython==2.2.1
-Flask==2.1.3
+Flask==2.2.0
 gunicorn==20.1.0
+idna==3.3
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jyserver==0.0.5
 MarkupSafe==2.1.1
+mongokit-py3==0.9.1.1
+pycodestyle==2.8.0
+PyJWT==2.6.0
 pymongo==4.2.0
-Werkzeug==2.1.2
+python-dotenv==0.20.0
+pytz==2022.6
+requests==2.28.1
+six==1.16.0
+toml==0.10.2
+twilio==7.15.2
+urllib3==1.26.11
+Werkzeug==2.2.1
 zipp==3.8.1
